# ten_minutes

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build_web.sh  custom_shell.html  mini_survival_game.py
src/: game.cpp  game.h  globals.cpp  globals.h  main.cpp
